components/ua/authenticate-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticate-frontend
spec:
  ports:
    - name: https
      protocol: TCP
      port: 3000
      targetPort: 3000
