components/ua/authenticate-frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authenticate-frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
  rules:
    - host: "*.facilities.rl.ac.uk" 
      http: &http_rules
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authenticate-frontend
                port:
                  number: 3000
    - host: "*.developers.facilities.rl.ac.uk"
        http: *http_rules
